--- a/src/final/header/header.module.css
+++ b/src/final/header/header.module.css
@@ -4,7 +4,7 @@
     padding: 20px;
     margin-top: 20px;
     color: white;
-    background: linear-gradient(180deg,rgb(199, 77, 6), transparent);
+    background: rgb(199, 77, 6);
   }
   .logo{
       width: 30%;
