--- a/src/final/AllRecipes/allrecipes.module.css
+++ b/src/final/AllRecipes/allrecipes.module.css
@@ -1,1 +1,27 @@
-123
+.head{
+    width: 100%;
+    height: 240px;
+    padding-top: 21px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    text-align: center;
+    background-image: linear-gradient(0deg,#fff,hsla(0,0%,93.3%,.7)),url(https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+    border-bottom: 1px solid rgb(184, 182, 182);
+}
+.title{
+    color: orange;
+    position: absolute;
+    top: 150px;
+    left: 45%;
+    font-size: 3rem;
+    font-family: serif;
+}
+.list{
+    text-align: center;
+}
+.names{
+    font-family: serif;
+    font-size: 1.3rem;
+    color:  rgb(90, 108, 112);
+}
