--- a/src/final/about/about.module.css
+++ b/src/final/about/about.module.css
@@ -1,1 +1,73 @@
-1
+.about{
+    display: flex;
+    flex-direction: column;
+    width: 1500px;
+}
+.head{
+    width: 100%;
+    height: 240px;
+    padding-top: 21px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    text-align: center;
+    background-image: linear-gradient(0deg,#fff,hsla(0,0%,93.3%,.7)),url(https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+    border-bottom: 1px solid rgb(184, 182, 182);
+}
+.title{
+    color: orange;
+    position: absolute;
+    top: 150px;
+    left: 45%;
+    font-size: 3rem;
+    font-family: serif;
+    text-align: center;
+}
+.content{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: 500px 700px;
+    grid-template-rows: 500px;
+    justify-content: center;
+    grid-column-gap: 70px;
+    margin-bottom: 3.5rem;
+}
+.img{
+    background: url("https://images.pexels.com/photos/5910952/pexels-photo-5910952.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
+}
+
+.text{
+    font-size: 1.35rem;
+    padding: 10px;
+    justify-content: center;
+    font-family: serif;
+    color: darkgoldenrod;
+}
+.about a{
+    align-self: center;
+}
+.but{
+    color: white;
+    background: #FB8F3D;
+    border: 1px #DADADA solid;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: 30pt;
+    outline: none;
+    margin-bottom: 3rem;
+    font-family: serif;
+}
+.but:hover {
+    border: 1px solid #EB5200;
+    box-shadow: 1px 1px 1px #EAEAEA;
+    color: #333333;
+    background: -webkit-linear-gradient(top, #FDA251, #FB8F3D);
+    background: -moz-linear-gradient(top, #FDA251, #FB8F3D);
+    background: -ms-linear-gradient(top, #FDA251, #FB8F3D);
+}
+.but:active {
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.3);   
+}
