--- a/src/final/categories/categories.module.css
+++ b/src/final/categories/categories.module.css
@@ -1,10 +1,39 @@
+.head{
+    width: 100%;
+    height: 240px;
+    padding-top: 21px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    text-align: center;
+    background-image: linear-gradient(0deg,#fff,hsla(0,0%,93.3%,.7)),url(https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+    border-bottom: 1px solid rgb(184, 182, 182);
+    display:flex;
+    flex-direction: column;
+}
+.title{
+
+    color: orange;
+    align-self: center;
+    margin-top: 50px;
+    margin-bottom: 0px;
+    font-size: 3rem;
+    font-family: serif;
+}
+.explaination{
+    font-size: 1rem;
+    align-self: center;
+    width: 700px;
+    font-family: serif;
+    color: slategray;
+}
 .Cuisine{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
 }
 .type1{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -13,8 +42,22 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://media.istockphoto.com/photos/chef-in-restaurant-kitchen-at-stove-with-high-burning-flames-picture-id913931820?b=1&k=6&m=913931820&s=170667a&w=0&h=BL5Nv1CjTfbtJpGpvwDtGQsQ3J7UUkxC1QcBo_Llxgk=");
+    background-position: center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+
+}
+.type1:hover{
+    background: linear-gradient(orange,transparent),
+    url('https://media.istockphoto.com/photos/chef-in-restaurant-kitchen-at-stove-with-high-burning-flames-picture-id913931820?b=1&k=6&m=913931820&s=170667a&w=0&h=BL5Nv1CjTfbtJpGpvwDtGQsQ3J7UUkxC1QcBo_Llxgk=');
+    background-position: center;
+    background-size: cover;
 }
 .type2{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -23,8 +66,21 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://cdn.pixabay.com/photo/2017/08/05/13/55/sushi-2583775__480.jpg");
+    background-position: center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+}
+.type2:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://cdn.pixabay.com/photo/2017/08/05/13/55/sushi-2583775__480.jpg");
+    background-position: center;
+    background-size: cover;
 }
 .type3{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -33,8 +89,21 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://images.pexels.com/photos/704569/pexels-photo-704569.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+}
+.type3:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://images.pexels.com/photos/704569/pexels-photo-704569.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
 }
 .type4{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -43,8 +112,21 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://images.pexels.com/photos/3343626/pexels-photo-3343626.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+}
+.type4:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://images.pexels.com/photos/3343626/pexels-photo-3343626.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
 }
 .type5{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -53,8 +135,21 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://images.pexels.com/photos/1059040/pexels-photo-1059040.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position:center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+}
+.type5:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://images.pexels.com/photos/1059040/pexels-photo-1059040.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
 }
 .type6{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -63,8 +158,21 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://images.pexels.com/photos/2638026/pexels-photo-2638026.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position:center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
+}
+.type6:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://images.pexels.com/photos/2638026/pexels-photo-2638026.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
 }
 .type7{
+    color: white;
     margin: 70px;
     height: 150px;
     width: 250px;
@@ -73,4 +181,17 @@
     flex-direction: column;
     justify-content: space-evenly;
     padding: 20px;
+    background: url("https://images.pexels.com/photos/1187766/pexels-photo-1187766.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position:center;
+    background-size: cover;
+    box-shadow: 2px 2px 6px 3px  rgba(0,0,0,0.3);
+    font-family: serif;
+    font-size: 1.2rem;
 }
+.type7:hover{
+    background: linear-gradient(orange,transparent),
+    url("https://images.pexels.com/photos/1187766/pexels-photo-1187766.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+    background-position: center;
+    background-size: cover;
+}
+
