--- a/src/final/homepage/homepage.module.css
+++ b/src/final/homepage/homepage.module.css
@@ -1,7 +1,9 @@
-.homeContent{
-    background: url("https://cdn.pixabay.com/photo/2015/03/26/09/54/restaurant-690569_1280.jpg");
+.homeIntro{
+    background: url("https://w.wallhaven.cc/full/dg/wallhaven-dgm9wm.jpg");
     background-size: cover;
-    height: auto;
+    height: 750px;
+    width: 100%;
+    background-repeat: no-repeat;
 }
 .intro{
     position: relative;
@@ -34,4 +36,102 @@
         bottom: 0;
         opacity: 1;
       }
+}
+.homeContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
+.lyrics{
+  display: flex;
+  justify-content: center;
+  font-family: serif;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  margin-top: 7.5rem;
+}
+.pic1{
+  width: 75%;
+  height: 45%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5rem;
+  margin-top: 3.5rem
+}
+.words{
+  text-align: center;
+  line-height: 2;
+  max-width: 750px;
+  position: relative;
+  left: 23%;
+  margin-top: 1.5rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.17rem;
+}
+hr{
+  border: 2px solid orange;
+  width: 25%;
+}
+.container {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 500px 500px;
+  grid-template-rows: 300px 300px;
+  justify-content: center;
+  grid-gap: 30px;
+  margin-bottom: 1rem;
+}
+.item1{
+  background: url("https://w.wallhaven.cc/full/dg/wallhaven-dgzoqo.jpg");
+  background-position: center;
+  background-size: cover;
+  border: 1.3px solid rgb(250, 213, 4);
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  border-radius: 50%;
+}
+.item2{
+  background: url("https://w.wallhaven.cc/full/5d/wallhaven-5dd263.jpg");
+  background-position: center;
+  background-size: cover;
+  border: 1.3px solid rgb(250, 213, 4);
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  border-radius: 50%;
+}
+.item3{
+  background: url("https://images.unsplash.com/photo-1565299585323-38d6b0865b47?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=828&q=80");
+  background-position: center;
+  background-size: cover;
+  border: 1.3px solid rgb(250, 213, 4);
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  border-radius: 50%;
+}
+.item4{
+  background: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/garlic-spaghetti-horizontal-1539203011.jpg?crop=1.00xw:0.752xh;0,0.108xh&resize=1200:*");
+  background-size: cover;
+  border: 1.3px solid rgb(250, 213, 4);
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  border-radius: 50%;
+}
+.update{
+  margin-bottom: 6rem;
+}
+.botTitle{
+  display: flex;
+  justify-content: center;
+  font-family: serif;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  margin-top: 7.5rem;
+}
+.botWords{
+  text-align: center;
+  line-height: 2;
+  max-width: 750px;
+  position: relative;
+  left: 23%;
+  margin-top: 1rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.17rem;
 }
