--- a/src/final/tips/tips.module.css
+++ b/src/final/tips/tips.module.css
@@ -1,1 +1,84 @@
-1
+.head{
+    width: 100%;
+    height: 240px;
+    padding-top: 21px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    text-align: center;
+    background-image: linear-gradient(0deg,#fff,hsla(0,0%,93.3%,.7)),url(https://images.unsplash.com/photo-1466637574441-749b8f19452f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60);
+    border-bottom: 1px solid rgb(184, 182, 182);
+}
+.title{
+    text-align: center;
+    color: orange;
+    position: absolute;
+    top: 150px;
+    left: 38%;
+    font-size: 3rem;
+    font-family: serif;
+}
+.body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+.tip1{
+    margin-bottom: 3rem;
+}
+.tipTitle1{
+    font-family: serif;
+}
+.tipImage1{
+    height: 70%;
+    max-width: 800px;
+    justify-content: center;
+}
+.tipWords1{
+    justify-content: center;
+    line-height: 2;
+    max-width: 800px;
+    font-family: 'Times New Roman', Times, serif;
+    color: slategray;
+}
+.tip2{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.tipTitle2{
+    font-family: serif;
+}
+.tipImage2{
+    height: 70%;
+    max-width: 800px;
+    justify-content: center;
+}
+.tipWords2{
+    justify-content: center;
+    line-height: 2;
+    max-width: 800px;
+    font-family: 'Times New Roman', Times, serif;
+    color: slategray;
+}
+.tip3{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.tipTitle3{
+    font-family: serif;
+}
+.tipImage3{
+    height: 70%;
+    max-width: 800px;
+    justify-content: center;
+}
+.tipWords3{
+    justify-content: center;
+    line-height: 2;
+    max-width: 800px;
+    font-family: 'Times New Roman', Times, serif;
+    color: slategray;
+}
+
