--- a/src/final/footer/footer.module.css
+++ b/src/final/footer/footer.module.css
@@ -24,3 +24,9 @@
     padding: 10px;
     font-size: 1.25rem;
 }
+.error{
+    color: white;
+    font-family: serif;
+    padding: 10px;
+    font-size: 1.25rem;
+}
